# cli-textual-demo

./: .coderabbit.yaml  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  REFACTOR.md  demo_manager.tape  pyproject.toml  run_serve.sh
.github/workflows/: sync-to-hf.yml
scripts/: sync_hf_secrets.py
src/cli_textual/: AGENTS.md  __init__.py  app.py  app.tcss
src/cli_textual/agents/: AGENTS.md  __init__.py  manager.py  model.py  observability.py  orchestrators.py  prompt_loader.py  prompts.yaml  specialists.py
src/cli_textual/core/: AGENTS.md  agent_schemas.py  chat_events.py  command.py  conversation_log.py  dummy_agent.py  fs.py  permissions.py
src/cli_textual/plugins/commands/: AGENTS.md  clear.py  head.py  help.py  load.py  ls.py  mode.py  (+4 more)
src/cli_textual/tools/: AGENTS.md  __init__.py  base.py  bash.py  read_file.py  registry.py  web_fetch.py
src/cli_textual/ui/: AGENTS.md
tests/: AGENTS.md  conftest.py  test_autocomplete_nav.py  test_chat_ux.py  test_pydantic_agents.py  test_survey.py  test_tools.py  test_ui.py
tests/integration/: test_interactive_agents.py  test_tool_agents.py  test_ui_full_agent_flow.py
tests/unit/: test_agent_tools.py  test_architecture.py  test_behavior.py  test_chat_ux.py  test_conversation_log.py  test_customization_hooks.py  test_exit.py  test_library_api.py  test_manager_interaction.py  test_memory.py  test_mode_interactive.py  test_observability.py  test_paste.py  test_pure_tools.py  test_pydantic_agents.py  test_run_pipeline.py  test_safe_mode.py  test_thinking.py  test_tools.py  test_tools_command.py  test_ui.py
(+4 files in other folders)
