[project]
name = "cli-textual"
version = "0.1.0"
description = "A Textual TUI prototype mirroring Gemini/Claude CLI UX"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.85.0",
    "textual-serve>=1.1.3",
]

[project.scripts]
demo-cli = "cli_textual.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
