[project]
name = "cli-textual"
version = "0.1.0"
description = "A Textual TUI prototype mirroring Gemini/Claude CLI UX"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=2.29.0",
    "pydantic-ai>=1.70.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "textual>=0.85.0",
    "textual-dev>=1.8.0",
    "textual-serve>=1.1.3",
]

[project.scripts]
demo-cli = "cli_textual.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
timeout = 5

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]
